--- a/OctagonPlatform/Views/Permissions/Index.cshtml
+++ b/OctagonPlatform/Views/Permissions/Index.cshtml
@@ -16,6 +16,9 @@
 <table class="table">
     <tr>
         <th>
+            Id
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Parent.Name)
         </th>
         <th>
@@ -27,6 +30,9 @@
     @foreach (var item in Model)
     {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Parent.Name)
             </td>
