--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus/_PartialForm.cshtml
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="form-horizontal">
         <div class="col-xs-12 col-sm-4 col-md-4">
-
+            @Html.HiddenFor(model => model.UserId, new { id = "userid" })
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2 group" })
@@ -26,7 +26,7 @@
             @Html.Label("Inactivity (Hours)", htmlAttributes: new { @class = "control-label col-md-2 inactivityHours" })
             <div class="col-md-10">
                 @Html.Editor("InactivityHours", new { htmlAttributes = new { @class = "form-control" } })
-               
+
                 @Html.ValidationMessage("InactivityHours", "", new { @class = "text-danger" })
             </div>
         </div>
