--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -183,7 +183,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                     <div class="row">
                         <div class="col-md-12">
                             <div class="static-map">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93666.66700119132!2d-80.35707090460306!3d26.101985419973026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d909ef1c11bee7%3A0xb2b8236cfe237e1!2sOdyssey+Capital+Management!5e0!3m2!1sen!2sus!4v1507817531258" width="550" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93666.66700119132!2d-80.35707090460306!3d26.101985419973026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d909ef1c11bee7%3A0xb2b8236cfe237e1!2sOdyssey+Capital+Management!5e0!3m2!1sen!2sus!4v1507817531258" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="col-sm-6">
