--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -3,78 +3,70 @@
 @{
     @*ViewBag.Title = "Octagon";*@
 
-ViewBag.Title = "Octagon";
-Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
+    ViewBag.Title = "Octagon";
+    Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
 
 }
 <nav class="navbar navbar-default navbar-fixed-top" style="">
     <div class="container">
 
         <div class="nav navbar-nav navbar-right">
-            @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-            {
-                <div>
-                    <div id="id01" class="modal">
-                        <div class="containerlogin">
-                            <form class="form-inline">
-                                <div class="i-container">
-                                    <span onclick="document.getElementById('id01').style.display = 'none'" class="close" title="Close Modal">&times;</span>
-                                </div>
-                                <div class="">
-                                    @Html.AntiForgeryToken()
-                                    @Html.HiddenFor(m => m.TriesToLogin)
-                                    @Html.ValidationSummary(true, "", new {@class = "text-warning"})
-                                    <div>
-                                        @Html.LabelFor(model => model.UserName)
-                                        @Html.TextBoxFor(model => model.UserName, new {placeholder = "Enter Username"})
-                                        @Html.ValidationMessageFor(model => model.UserName, "", new {@class = "text-danger"})
-                                    </div>
-                                    <div>
-                                        @Html.LabelFor(model => model.Password)
-                                        @Html.PasswordFor(model => model.Password, new {placeholder = "Enter Password"})
-                                        @Html.ValidationMessageFor(model => model.Password, "", new {@class = "text-danger"})
-                                    </div>
-                                    <input type="submit" value="Login" class="btn btn-primary btn-block"/>
-                                    <input type="checkbox" checked="checked"> Remember me
-                                </div>
-                                <div class="" style="background-color: #f1f1f1">
-                                    <button type="button" onclick="document.getElementById('id01').style.display = 'none'" class="cancelbtn">Cancel</button>
-                                    <span class="psw">Forgot <a href="#">Password?</a></span>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <script>
-                        // Get the modal
-                        var modal = document.getElementById('id01');
 
-                        // When the user clicks anywhere outside of the modal, close it
-                        window.onclick = function(event) {
-                            if (event.target == modal) {
-                                modal.style.display = "none";
-                            }
+            <div>
+                <div id="id01" class="modal">
+                    <div class="containerlogin">
+
+                        <div class="i-container">
+                            <span onclick="document.getElementById('id01').style.display = 'none'" class="close" title="Close Modal">&times;</span>
+                        </div>
+                        @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+                        {
+                            <div class="">
+
+                                @Html.AntiForgeryToken()
+                                @Html.HiddenFor(m => m.TriesToLogin)
+                                @Html.ValidationSummary(true, "", new { @class = "text-warning" })
+                                <div>
+                                    @Html.LabelFor(model => model.UserName)
+                                    @Html.TextBoxFor(model => model.UserName, new { placeholder = "Enter Username" })
+                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                                </div>
+                                <div>
+                                    @Html.LabelFor(model => model.Password)
+                                    @Html.PasswordFor(model => model.Password, new { placeholder = "Enter Password" })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                </div>
+                                <input type="submit" value="Login" class="btn btn-primary btn-block" />
+                                <label><input type="checkbox" checked="checked">Remember me</label>
+
+                            </div>
+                            <div class="" style="background-color: #f1f1f1">
+                                <button type="button" onclick="document.getElementById('id01').style.display = 'none'" class="cancelbtn">Cancel</button>
+                                <span class="psw">Forgot <a href="#">Password?</a></span>
+                            </div>
                         }
-                    </script>
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button data-toggle="collapse" data-target="#navcol-1" class="navbar-toggle collapsed" style="width: 45px;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                           <a href="#" class="navbar-brand navbar-link" style="font-size: 35px; color: #222222; margin: -14px; height: 0px; padding: 28px; width: 238px;">
-                            <img src="~/Octagon/assets/img/favicon-32x32.png" id="logo"/><strong>Octagon </strong></a>
 
-                        </div>
-                        <div class="collapse navbar-collapse" id="navcol-1">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li role="presentation"><a href="#contact" style="color: rgb(57, 65, 69);">Contact Us</a></li>
-                                <li role="presentation"><a href="#" style="color: rgb(57, 65, 69);" onclick="document.getElementById('id01').style.display = 'block'">Login</a></li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
-            }
+
+                <div class="container">
+                    <div class="navbar-header">
+                        <button data-toggle="collapse" data-target="#navcol-2" class="navbar-toggle collapsed" style="width: 45px;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+
+                    </div>
+                    <div class="collapse navbar-collapse" id="navcol-2">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li role="presentation"><a href="#contact" style="color: rgb(57, 65, 69);">Contact Us</a></li>
+                            <li role="presentation"><a href="#" style="color: rgb(57, 65, 69);" onclick="$('#id01').css('display','block');">Login</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </nav>
-<br/>
+<br />
 <br />
 <br />
 <br />
@@ -85,22 +77,22 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
     </div>
 </div>
 <hr>
-<div class="container site-section"  id="middle">
+<div class="container site-section" id="middle">
     <div class="row" style="display:flex;">
         <div class="col-md-4">
-                <img src="~/Octagon/assets/img/1.jpg" id="team"> 
+            <img src="~/Octagon/assets/img/1.jpg" id="team">
         </div>
         <div class="col-md-4">
-                <img src="~/Octagon/assets/img/2.jpg" id="vision">
+            <img src="~/Octagon/assets/img/2.jpg" id="vision">
         </div>
         <div class="col-md-4">
-                <img src="~/Octagon/assets/img/3.jpg" id="innovation" > 
+            <img src="~/Octagon/assets/img/3.jpg" id="innovation">
         </div>
     </div>
 </div>
 <div class="container-fluid" id="container-fluid">
     <div class="banner-home">
-        <img src="~/Octagon/assets/img/banner-octa.jpg"> 
+        <img src="~/Octagon/assets/img/banner-octa.jpg">
     </div>
     <br>
     <br>
@@ -141,23 +133,23 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                     <fieldset>
                         <legend><i class="fa fa-envelope"></i> Contact Us</legend>
                     </fieldset>
-                    <div class="form-group has-feedback"style="margin-left: 0px;">
+                    <div class="form-group has-feedback" style="margin-left: 0px;">
                         <label class="control-label" for="from_name">Name</label>
                         <input class="form-control" type="text" name="from_name" required placeholder="Full Name" id="from_name" tabindex="-1" />
                     </div>
-                    <div class="form-group has-feedback"style="margin-left: 0px;">
+                    <div class="form-group has-feedback" style="margin-left: 0px;">
                         <label class="control-label" for="from_email">Email</label>
                         <input class="form-control" type="email" name="from_email" required placeholder="Email Address" id="from_email" />
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="form-group has-feedback"style="margin-left: 0px;">
+                            <div class="form-group has-feedback" style="margin-left: 0px;">
                                 <label class="control-label" for="from_phone">Phone</label>
                                 <input class="form-control" type="text" name="from_phone" placeholder="Primary Phone" id="from_phone" />
                             </div>
                         </div>
                         <div class="col-sm-6" style="padding-top: 8px;">
-                            <div class="form-group"style="margin-left: 0px;">
+                            <div class="form-group" style="margin-left: 0px;">
                                 <label class="control-label" for="calltime">Best Time to Call</label>
                                 <select class="form-control" name="Call Time" id="calltime">
                                     <option value="Morning" selected>Morning</option>
@@ -167,11 +159,11 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                             </div>
                         </div>
                     </div>
-                    <div class="form-group"style="margin-left: 0px;">
+                    <div class="form-group" style="margin-left: 0px;">
                         <label class="control-label" for="comments">Comments</label>
                         <textarea class="form-control" rows="5" name="Comments" placeholder="Enter comments here" id="comments"></textarea>
                     </div>
-                    <div class="form-group"style="margin-left: 0px;">
+                    <div class="form-group" style="margin-left: 0px;">
                         <button class="btn btn-primary btn-block" type="submit">Send <i class="fa fa-chevron-circle-right"></i></button>
                     </div>
                     <hr class="visible-xs-block visible-sm-block" />
