--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -52,6 +52,9 @@
                 <div class="container">
                     <div class="navbar-header">
                         <button data-toggle="collapse" data-target="#navcol-2" class="navbar-toggle collapsed" style="width: 45px;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        <a href="#" class="navbar-brand navbar-link" style="font-size: 35px; color: #222222; margin: -14px; height: 0px; padding: 28px; width: 238px;">
+                            <img src="~/Octagon/assets/img/favicon-32x32.png" id="logo" /><strong>Octagon </strong>
+                        </a>
 
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-2">
