--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -25,6 +25,12 @@
 <div class="row" id="detailterminal">
 
     <div class="col-md-6">
+        @{ 
+            if (ViewBag.Permission)
+            {
+
+            }
+        }
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div class="panel-heading">
