--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -7,6 +7,17 @@
     Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
 
 }
+<script>
+    // Get the modal
+    var modal = document.getElementById('id01');
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 <nav class="navbar navbar-default navbar-fixed-top" style="">
     <div class="container">
 
