--- a/OctagonPlatform/Views/ReportsSmart/CashManagement/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement/_PartialForm.cshtml
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="form-horizontal">
         <div class="col-xs-12 col-sm-4 col-md-4">
+            @Html.HiddenFor(model => model.UserId)
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
