--- a/OctagonPlatform/Views/Shared/Error.cshtml
+++ b/OctagonPlatform/Views/Shared/Error.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container" style="text-align: center; padding-bottom: 20px; padding-top: 20px"></div>
 <div class="form-group">
-    <h1>Unknown Error</h1>
+    <h1>@TempData["Error"]</h1>
     <h2 class="alert-danger">@ViewBag.Error </h2>
 </div>
 <div class="form-group">
