--- a/OctagonPlatform/Views/Shared/Sections/Header.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Header.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!--VERSION ISMAEL-->
+﻿<!--VERSION ISMAEL-->
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +9,9 @@
 @Scripts.Render("~/bundles/modernizr")
 
 
+@Styles.Render("~/Content/css")
 
-@Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
+@*@Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
 @Styles.Render("~/Octagon/assets/css/sb-admin.css")
 @Styles.Render("~/Octagon/assets/css/sb-admin.min.css")
 @Styles.Render("~/Content/datatables/css/datatables.min.css")
@@ -21,7 +21,7 @@
 @Styles.Render("~/Octagon/assets/fonts/font-awesome.min.css")
 @Styles.Render("~/Octagon/assets/css/styles.css")
 
-@Styles.Render("~/Content/cssjqueryui")
+@Styles.Render("~/Content/cssjqueryui")*@
 <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-16x16.png" sizes="16x16" />
 
