--- a/OctagonPlatform/Views/Shared/_LayoutOctagon.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutOctagon.cshtml
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
-    @Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
+    @*@Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
     @Styles.Render("~/Octagon/assets/css/styles.css")
     @Styles.Render("~/Octagon/assets/fonts/font-awesome.min.css")
     @Styles.Render("~/Octagon/assets/fonts/simple-line-icons.min.css")
-    @Styles.Render("~/Octagon/assets/css/bootstrap.min.css")
+    @Styles.Render("~/Octagon/assets/css/bootstrap.min.css")*@
+
+    @Styles.Render("~/Content/home/css")
 
     <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-16x16.png" sizes="16x16" />
