--- a/OctagonPlatform/Views/Shared/ErrorWithLayout.cshtml
+++ b/OctagonPlatform/Views/Shared/ErrorWithLayout.cshtml
@@ -1,1 +1,8 @@
-﻿<div>@ViewBag.Error</div>
+﻿<div class="container" style="text-align: center; padding-bottom: 20px; padding-top: 20px"></div>
+<div class="form-group">
+    <h1>@TempData["Error"]</h1>
+    <h2 class="alert-danger">@ViewBag.Error </h2>
+</div>
+<div class="form-group">
+    <button type="reset" onclick="history.back();" class="btn btn-default" style="background-color:red">Back</button>
+</div>
