--- a/OctagonPlatform/Views/Subscription/Table.cshtml
+++ b/OctagonPlatform/Views/Subscription/Table.cshtml
@@ -74,7 +74,7 @@
     }
 
 </table>
-
+<div id="message"></div>
 @using (Html.BeginForm("Create", "Subscription", FormMethod.Post, new { @id = "FormSub" }))
 {
     @Html.AntiForgeryToken()
