--- a/OctagonPlatform/Views/Error/_PartialAlert.cshtml
+++ b/OctagonPlatform/Views/Error/_PartialAlert.cshtml
@@ -1,14 +1,23 @@
 ﻿<div id="error">
-@if (TempData["Success"] != null)
-{
-    <div class="alert alert-success">
-        <strong>@TempData["Success"]</strong>
-    </div>
-}
-@if (TempData["Danger"] != null)
-{
-    <div class="alert alert-danger">
-        <strong>@TempData["Danger"]</strong>
-    </div>
-}
+    @if (TempData["Success"] != null)
+    {
+        <div class="alert alert-success">
+            <strong>@TempData["Success"]</strong>
+        </div>
+    }
+    @if (TempData["Danger"] != null)
+    {
+        <div class="alert alert-danger">
+            <strong>@TempData["Danger"]</strong>
+        </div>
+    }
 </div>
+
+<script>
+    $(function () {
+        $('#error').fadeIn('slow', function () {
+            $('#error').fadeOut(7000);
+        });
+    })
+
+</script>
