--- a/OctagonPlatform/Views/Error/_PartialAlert.cshtml
+++ b/OctagonPlatform/Views/Error/_PartialAlert.cshtml
@@ -11,7 +11,14 @@
             <strong>@TempData["Danger"]</strong>
         </div>
     }
-</div>
+    @if (TempData["Warning"] != null)
+    {
+        <div class="alert alert-warning" style="width:50%;position:relative;margin:0 auto;">
+            <strong>Warning!</strong> TempData["Warning"]
+        </div>
+    }
+
+    </div>
 
 <script>
     $(function () {
