--- a/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
@@ -13,15 +13,15 @@
     <div class="panel-body">
 
         @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-      @Html.Partial("_PartialForm",Model)
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10" style="text-align: right;">
-                <input type="submit" value="Filter" class="btn btn-primary" />
+        {
+            @Html.AntiForgeryToken()
+            @Html.Partial("_PartialForm", Model)
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10" style="text-align: right;">
+                    <input type="submit" value="Filter" class="btn btn-primary" />
+                </div>
             </div>
-        </div>
-}
+        }
 
     </div>
 </div>
@@ -34,16 +34,16 @@
         </div>
         <div class="panel-body">
             @Html.Partial("../_PartialMorrisChart")
-           
+
         </div>
     </div>
 
     <div class="panel panel-primary">
         <div class="panel-heading">
-          
-            <span class="panel-title" >List Cash Load</span>
+
+            <span class="panel-title">List Cash Load</span>
             <span class="panel-title" style="float:right">Date: @DateTime.Now</span>
-           
+
         </div>
         <div class="panel-body">
             <div style="display:none" id="idhead">
@@ -51,31 +51,31 @@
 
             </div>
             @if (TempData["List"] != null)
-    {
-        <!-- Single button -->
+            {
+                <!-- Single button -->
 
-        <div class="row">
-            <div class="col-sm-9"></div>
-            <div class="col-sm-3" style="text-align: right;">
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
-                    <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"] + ".xls")'  ,'','grid','Portrait');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
-                    <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"] + ".doc")'  ,'idhead','grid','Portrait');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
+                <div class="row">
+                    <div class="col-sm-9"></div>
+                    <div class="col-sm-3" style="text-align: right;">
+                        <div class="btn-group" role="group" aria-label="...">
+                            <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
+                            <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"] + ".xls")'  ,'','grid','Portrait');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                            <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"] + ".doc")'  ,'idhead','grid','Portrait');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
+                        </div>
+                        <p></p>
+                    </div>
                 </div>
-                <p></p>
-            </div>
-        </div>
-}
+            }
             @Html.Partial("../_PartialTable")
             @using (Html.BeginForm("Export", "Reports", FormMethod.Post))
-    {
-        <input type="hidden" name="html" />
-        <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
-        <input type="hidden" name="orientation" value="Portrait" />
-        <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
+            {
+                <input type="hidden" name="html" />
+                <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
+                <input type="hidden" name="orientation" value="Portrait" />
+                <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
 
-}
+            }
             <div>
                 @Html.ActionLink("Back to List", "Index")
 
@@ -89,14 +89,14 @@ else
         <strong>Warning!</strong> Not Record Available.
     </div>
 }
-    @section Scripts {
-        
+@section Scripts {
+    @Html.Partial("../ScriptsReport")
     <script>
 
-    
+
 
     $(function () {
-      
+
         $("#EndDate").datepicker({
             dateFormat: "mm/dd/yy"
         });
@@ -107,7 +107,7 @@ else
         var tempdataval = '@TempData["List"]';
         if (tempdataval != null && tempdataval != '') {
             callankle2();
-            ChartBar();        
+            ChartBar();
 
             var sum1 = 0, sum2 = 0, sum3 = 0;
             $("#grid tbody tr").find('td:eq(3)').each(function (index, val) {
@@ -127,16 +127,16 @@ else
             $("#grid tr").find('td:eq(3), td:eq(4), td:eq(5)').each(function (index, val) {
                 $(this).html("$" + $(this).html());
             });
-       
-           
-        } 
+
+
+        }
 
     });
-     
+
 
     </script>
 
 
-    }
+}
 
 
