--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus/TerminalStatus.cshtml
@@ -1,8 +1,8 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalStatusViewModel
+    @{ 
     ViewBag.Title = "TerminalStatus";
 }
-<h2>TerminalStatus</h2>
-<p></p>
+
 <div class="panel panel-primary">
     <div class="panel-heading">
         <a name="ankle"></a>
@@ -11,16 +11,16 @@
     <div class="panel-body">
 
         @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.Partial("_PartialForm", Model)
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10" style="text-align: right;">
-                <input type="submit" value="Filter" class="btn btn-primary" />
+        {
+            @Html.AntiForgeryToken()
+            @Html.Partial("_PartialForm", Model)
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10" style="text-align: right;">
+                    <input type="submit" value="Filter" class="btn btn-primary" />
+                </div>
             </div>
-        </div>
-      
-}
+
+        }
 
     </div>
 </div>
@@ -46,31 +46,31 @@
 
             </div>
             @if (TempData["List"] != null)
-    {
-        <!-- Single button -->
+            {
+                <!-- Single button -->
 
-        <div class="row">
-            <div class="col-sm-9"></div>
-            <div class="col-sm-3" style="text-align: right;">
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
-                    <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"] + ".xls")'  ,'','grid','Landscape');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
-                    <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"] + ".doc")'  ,'idhead','grid','Landscape');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
+                <div class="row">
+                    <div class="col-sm-9"></div>
+                    <div class="col-sm-3" style="text-align: right;">
+                        <div class="btn-group" role="group" aria-label="...">
+                            <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
+                            <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"] + ".xls")'  ,'','grid','Landscape');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                            <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"] + ".doc")'  ,'idhead','grid','Landscape');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
+                        </div>
+                        <p></p>
+                    </div>
                 </div>
-                <p></p>
-            </div>
-        </div>
-}
+            }
             @Html.Partial("../_PartialTable")
             @using (Html.BeginForm("Export", "Reports", FormMethod.Post))
-    {
-        <input type="hidden" name="html" />
-        <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
-        <input type="hidden" name="orientation" value="Landscape" />
-        <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
+            {
+                <input type="hidden" name="html" />
+                <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
+                <input type="hidden" name="orientation" value="Landscape" />
+                <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
 
-}
+            }
 
             <div>
                 @Html.ActionLink("Back to List", "Index")
@@ -86,11 +86,10 @@ else
     </div>
 }
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/Scripts/autocomplete.js")
+    @Html.Partial("../ScriptsReport")
     <script>
 
-    
+
     $(function () {
 
 
