--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -11,7 +11,10 @@
 }
 
 <p class="col-md-6">
-    @Ajax.ActionLink("ADD", "Create", "TerminalContacts", new { id = Model.Id, terminalId = Model.TerminalId },
+    @{
+        if (Model.IsAddContact)
+        {
+            @Ajax.ActionLink("ADD", "Create", "TerminalContacts", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
                        UpdateTargetId = "AddContact",
@@ -25,6 +28,8 @@
                        data_toggle = "modal",
                        data_target = "#AddContact"
                    })
+        }
+    }
 </p>
 
 
@@ -41,18 +46,27 @@
     </thead>
     <tbody id="listOfTerminalContacts">
         @if (Model.Contacts != null)
-            {
+        {
             foreach (var item in Model.Contacts)
             {
                 if (!item.Deleted)
                 {
                     <tr class="info">
                         <td>@item.Name</td>
-                        <td>@item.LastName</td> 
+                        <td>@item.LastName</td>
                         <td>@item.Phone</td>
                         <td>@item.Email</td>
                         <td>@item.Address1</td>
-
+                        @{ 
+                            if (Model.IsEditContact)
+                            {
+                                <td>Edit</td>
+                            }
+                            if (Model.IsDeleteContact)
+                            {
+                                <td>Delete</td>
+                            }
+                        }
                     </tr>
                 }
             }
@@ -61,16 +75,15 @@
 </table>
 </div>
 @section Scripts {
-    @Scripts.Render("~/bundles/search")
-    @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+    @*@Scripts.Render("~/bundles/search")*@
     @* @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js") *@
 
-    <script>
+    @*<script>
         var jQuery_1_10_2 = $.noConflict(true);
 
         jQuery_1_10_2(function () {
             $("#contacts").DataTable();
         });
-    </script>
+    </script>*@
 }
 
