add modal error and edit viewmodel vaultcash

--- a/OctagonPlatform/Views/VaultCash/Details.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.VaultCash
+﻿@model OctagonPlatform.Models.FormsViewModels.VaultCashVM
 
 @{
     ViewBag.Title = "Details";
