fix error in valutcash vm. OK

--- a/OctagonPlatform/Views/VaultCash/Create.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.VaultCashFormViewModel
+﻿@model OctagonPlatform.Models.FormsViewModels.VaultCashVM
 
 @{
     ViewBag.Title = "Create";
