--- a/OctagonPlatform/Views/VaultCash/VaultCashForm.cshtml
+++ b/OctagonPlatform/Views/VaultCash/VaultCashForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.VaultCashFormViewModel
+﻿@model OctagonPlatform.Models.FormsViewModels.VaultCashVM
 
 
 @using (Html.BeginForm(Model.Action, "VaultCash", FormMethod.Post))
