fix error in general info to partner

--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -9,7 +9,14 @@
     <tr>
 
         <th>Parent:</th>
-        <th>@Model.Parent.BusinessName</th>
+        <th>@{
+            if (Model.Parent != null)
+            {
+                <div>
+                    Model.Parent.BusinessName;
+                </div>
+            }
+        }</th>
     </tr>
     <tr >
 
